src/k8s/apps/gooddads-enrollment-bot/base/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gooddads-enrollment-bot-https-redirect
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  redirectScheme:
    scheme: https
    permanent: true
