src/k8s/apps/gooddads-enrollment-bot/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gooddads-enrollment-bot
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app.kubernetes.io/name: gooddads-enrollment-bot
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
